--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ pylint = "*"
 marshmallow-sqlalchemy = "*"
 python-dotenv = "*"
 pymysql = "*"
+pycryptodome = "*"
+pycryptodomex = "*"
 
 [requires]
 python_version = "3.7"
